# agent-nonsense

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  agent_nonsense_server.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
agent_nonsense/: __init__.py  longform.py  presets.json  server.py
docs/: API.md  RELEASING.md
promo/: README.md  render_video.py
tests/: __init__.py  test_presets.py  test_server.py
